feat(mx.edu.utez.sacit): Added the availability controller
Add everything related to the use of available timetables

Author: LeoDoCa